[metadata]
name = vcov
description = Markowitz Portfolio Optimization with Probabilistic Deep Learning
author = Maciej Wysocki
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages =
    vcov
install_requires =
    pandas~=1.3.4
	keras~=2.4.3
	mxnet~=1.7.0.post2
	gluonts~=0.8.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-mock>=3.5
    mypy>=0.910
    flake8>=3.9

[options.package_data]
vcov = py.typed